cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(MY_GRAND_PROJECT)
find_package(PCL 1.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(iss_compute iss_compute.cpp)
add_executable(visualize visualize.cpp)
target_link_libraries(iss_compute ${PCL_LIBRARIES})
target_link_libraries(visualize ${PCL_LIBRARIES})

